Bug 307978 - Selecting a tool causes other tools to become difficult to access
Summary: Selecting a tool causes other tools to become difficult to access
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: ui (other bugs)
Version First Reported In: Comes with KDE
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-06 13:54 UTC by Albert Hofkamp
Modified: 2014-05-03 16:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments
all tools nicely accessible (39.17 KB, image/png)
2012-10-06 13:54 UTC, Albert Hofkamp
Details
tools difficult to access (38.10 KB, image/png)
2012-10-06 13:54 UTC, Albert Hofkamp
Details
Image of the complete bar (24.68 KB, image/png)
2014-04-30 19:50 UTC, Albert Hofkamp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Hofkamp 2012-10-06 13:54:23 UTC
Created attachment 74376 [details]
all tools nicely accessible

Kolour paint 4.9.2, but the problem appeared earlier. I just never got around to submitting a bug earlier.

The problem is that selecting a tool resizes the tool area making other tools difficult to reach and/or set its parameters (eg the spraying area with the spray can).
The attachments show the problem.
Comment 1 Albert Hofkamp 2012-10-06 13:54:56 UTC
Created attachment 74377 [details]
tools difficult to access
Comment 2 Martin Koller 2012-10-14 16:52:37 UTC
I can not reproduce it. I think it depends on the widget style you are using.
Which style are you using ?
Comment 3 Christoph Feck 2012-10-15 10:45:51 UTC
The bug is reproducible, even with Oxygen style (what the screen shot shows). It might be a Qt bug, though, not respecting sizeHint changes for items in a tool bar or dock widget (whatever that widget is).
Comment 4 Martin Koller 2014-04-27 16:14:34 UTC
I still (4.13.0) can not reproduce it.
Can you check if you can reproduce it and explain exactly the toolbar settings you have (icon size, etc.)
Thanks
Comment 5 Albert Hofkamp 2014-04-28 20:59:02 UTC
Currently using 4.12.4 of Fedora 20, and they have moved the tools back so they are positioned vertically left of the canvas, where there is ample space for vertically extended boxes with choices such as spray cans.

It doesn't look like I can move the bar back to the position that causes trouble.
I cannot reproduce this in this version.

For what it's worth, my icons are set to oxygen, and the toolbar size is 22.
Comment 6 Martin Koller 2014-04-29 06:51:24 UTC
> It doesn't look like I can move the bar back to the position that causes trouble.

Do a right click on the toolbar and deselect "Lock Toolbar Position" - then you can move the toolbar to where you want.
Comment 7 Albert Hofkamp 2014-04-30 19:44:41 UTC
Thanks, nice option, never knew about that one :)

After moving the bar back in the horizontal position, and playing with it, I initially had trouble reproducing the issue. The rows of icons seemed to shift a few pixels, and that was it.

By accident I reconstructed the issue. Select an icon size of eg 22 or bigger, and check it's all working. Then select the yellow pen (just like the "all tools nicely accessible" picture). Then select an icon size of 16 (right menu on the tool bar -> icon size -> 16). The menu bar reduces in height. Then select a tool with a large selection, eg the brush or the spray can (2nd image). In my version 4.12.4, the bottom row is just partly visible.

What seems to happen is that the selection of eg brushes or sprays decides the needed height (which makes sense with small icon sizes), and the icon rows are centered vertically in the available space.
If you select a pen, and then switch to a small icon size, the program assumes all tools and selections will fit in the currently required space. Unfortunately, the yellow pen has no further selection, and thus needs the less height than the other tools.
Comment 8 Albert Hofkamp 2014-04-30 19:50:55 UTC
Created attachment 86376 [details]
Image of the complete bar

What I forgot to mention is that the icon sizes of the other menu bar entries is 22, and the text is alongsize the icon (thus needing little vertical space).
Comment 9 Christoph Feck 2014-04-30 20:33:09 UTC
I could reproduce with the steps from comment #7. Changing the icon size triggers a relayout of the tool bar (including updating its sizeHint), but showing the extended options does not.
Comment 10 Martin Koller 2014-05-03 16:02:05 UTC
Git commit c1d1612186a78cf41546cf6406c9ce23dcfc2a7c by Martin Koller.
Committed on 03/05/2014 at 15:59.
Pushed by mkoller into branch 'KDE/4.13'.

adjust size hint when toolbar options might show up or hide
FIXED-IN: 4.13.1

M  +2    -0    widgets/toolbars/kpToolToolBar.cpp

http://commits.kde.org/kolourpaint/c1d1612186a78cf41546cf6406c9ce23dcfc2a7c
Comment 11 Martin Koller 2014-05-03 16:02:40 UTC
Git commit 8efba96c9a46f276078773a555fb5e8b7a346725 by Martin Koller.
Committed on 03/05/2014 at 15:59.
Pushed by mkoller into branch 'master'.

adjust size hint when toolbar options might show up or hide
FIXED-IN: 4.13.1

M  +2    -0    widgets/toolbars/kpToolToolBar.cpp

http://commits.kde.org/kolourpaint/8efba96c9a46f276078773a555fb5e8b7a346725
Comment 12 Martin Koller 2014-05-03 16:21:57 UTC
Git commit fa4059c47805e78dfcb42035e814d81ba61d6d79 by Martin Koller.
Committed on 03/05/2014 at 16:20.
Pushed by mkoller into branch 'KDE/4.13'.

Make sure the toolbar has also the correct size on startup
FIXED-IN: 4.13.1

M  +2    -2    widgets/toolbars/kpToolToolBar.cpp

http://commits.kde.org/kolourpaint/fa4059c47805e78dfcb42035e814d81ba61d6d79
Comment 13 Martin Koller 2014-05-03 16:22:09 UTC
Git commit f2e86e01e628e3030b4cdd59445e78c2d89a886a by Martin Koller.
Committed on 03/05/2014 at 16:20.
Pushed by mkoller into branch 'master'.

Make sure the toolbar has also the correct size on startup
FIXED-IN: 4.13.1

M  +2    -2    widgets/toolbars/kpToolToolBar.cpp

http://commits.kde.org/kolourpaint/f2e86e01e628e3030b4cdd59445e78c2d89a886a