adjust size hint when toolbar options might show up or hide

BUG: 307978
FIXED-IN: 4.13.1